--- a/TeamWork/Website/Views/Home/About.cshtml
+++ b/TeamWork/Website/Views/Home/About.cshtml
@@ -2,6 +2,6 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>This is our project for SoftUni-Tech Module</h3>
 
 <p>Use this area to provide additional information.</p>
