--- a/TeamWork/Website/Views/Home/Index.cshtml
+++ b/TeamWork/Website/Views/Home/Index.cshtml
@@ -3,29 +3,32 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Panda HotF(i)X</h1>
+    <p class="lead">Team Panda HotF(i)X's project for the Software Univerity practical group project task</p>
+    <p><a href="http://hotfix.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>About us</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            You can read more about our team in the section "About us".
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="http://hotfix.net/About">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Contact</h2>
+        <p>Our contact information can be found under the "Contact us" section.</p>
+        <p><a class="btn btn-default" href="http://hotfix.net/Contact">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Game</h2>
+        <p>You can find our game under the section "Game".</p>
+        <p><a class="btn btn-default" href="http://hotfix.net/Game">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Blog</h2>
+        <p>You can check our blog dedicted to the game under the section "Blog".</p>
+        <p><a class="btn btn-default" href="http://hotfix.net/Blog">Learn more &raquo;</a></p>
     </div>
 </div>
