--- a/TeamWork/Website/Views/Home/Contact.cshtml
+++ b/TeamWork/Website/Views/Home/Contact.cshtml
@@ -5,13 +5,13 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    PandaWood<br />
+    RedForest, PandaLand<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    0888/888888
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:Support@hotfix.net">Support@hotfix.net</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@hotfix.net">Marketing@hotfix.net</a>
 </address>
