--- a/TeamWork/Website/Views/Shared/_Layout.cshtml
+++ b/TeamWork/Website/Views/Shared/_Layout.cshtml
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Panda HotF(i)X</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <href src="img.png"></href>
 
 </head>
 <body>
@@ -17,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Project Panda", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Project Panda HotF(i)X", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -35,7 +36,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>© 2016 - Project Panda</p>
+            <p>© 2016 - Panda HotF(i)X</p>
         </footer>
     </div>
 
