--- a/TeamWork/Website/Content/Site.css
+++ b/TeamWork/Website/Content/Site.css
@@ -1,7 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    background-image: url(homePageTheme.jpg)
+    background-image: url(../Images/homePageTheme.jpg)
 }
 
 /* Set padding to keep content from hitting the edges */
