--- a/TeamWork/Website/Views/Shared/_Layout.cshtml
+++ b/TeamWork/Website/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title - Panda HotF(i)X</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <href src="img.png"></href>
+    <href="~/Images/homePageTheme.jpg" src="homePageTheme.jpg"></href>
 
 </head>
 <body>
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Project Panda HotF(i)X", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Panda HotF(i)X", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
