--- a/TeamWork/Website/Views/Shared/_Layout.cshtml
+++ b/TeamWork/Website/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title - Panda HotF(i)X</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <href="~/Images/homePageTheme.jpg" src="homePageTheme.jpg"></href>
+    <href="~/Images/homePageTheme.jpg" src="homePageTheme.jpg"></href=""="~">
 
 </head>
 <body>
