--- a/TeamWork/MyBlog/MyBlog/Views/Manage/Index.cshtml
+++ b/TeamWork/MyBlog/MyBlog/Views/Manage/Index.cshtml
@@ -53,7 +53,7 @@
                 ]
             </dd>
         *@
-        <dt>Two-Factor Authentication:</dt>
+     <!--  <dt>Two-Factor Authentication:</dt>
         <dd>
             <p>
                 There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
@@ -79,6 +79,6 @@
                         </text>
                     }
                 }*@
-        </dd>
+        </dd>-->
     </dl>
 </div>
