Attached game to Teamwork projet and added separate file for game alone

--- a/TeamWork/Website/Content/bootstrap.css
+++ b/TeamWork/Website/Content/bootstrap.css
@@ -314,8 +314,8 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
-  color: #333333;
-  background-color: #ffffff;
+  color: #ffffff;
+  background-color: #333333;
 }
 
 input,
@@ -492,7 +492,7 @@ h6 small,
 .h6 small {
   font-weight: normal;
   line-height: 1;
-  color: #999999;
+  color: #ffffff;
 }
 
 h1,
